Se configura CSS, se agrega el tipo de letra.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+:root {
+  --color-one: #666a86;
+  --color-one-light: #868791;
+  --color-two: #788aa3;
+  --color-three: #92b6b1;
+  --color-four: #b2c9ab;
+  --color-five: #e8ddb5;
+  --color-font: hsl(233, 14%, 36%);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -23,30 +33,66 @@
   justify-content: center;
 }
 
-.box-data_form {
+.box-data_title {
   width: 100%;
-  padding: 5px;
+  padding: 15px;
+  margin-bottom: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
+  border-radius: 1.6rem;
+  background: linear-gradient(var(--color-three), var(--color-four));
+  color: var(--color-font);
+  -webkit-box-shadow: 6px 7px 21px 7px rgba(0, 0, 0, 0.29);
+  box-shadow: 6px 7px 21px 7px rgba(0, 0, 0, 0.29);
+  font-family: "Mukta", sans-serif;
 }
 
-.box-data_form input {
+.box-data_title h1 {
+  font-size: 3rem;
+}
+
+.box-data_form {
+  width: 100%;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(var(--color-three), var(--color-five));
+  color: var(--color-font);
+  border-radius: 1.6rem;
+  -webkit-box-shadow: 6px 7px 21px 7px rgba(0, 0, 0, 0.29);
+  box-shadow: 6px 7px 21px 7px rgba(0, 0, 0, 0.29);
+  font-family: "Mukta", sans-serif;
+}
+
+.box-data_form label {
+  width: 100%;
+}
+
+.box-data_form label input {
   width: 100%;
   height: 48px;
   margin: 10px 0;
   padding: 0 10px;
   box-sizing: border-box;
-  border: 3px solid black;
-  border-radius: 10px;
+  border: none;
+  border-radius: 0.9rem;
   outline: none;
   font-size: 1.8rem;
+  transition: 0.2s ease-in-out;
 }
 
-.box-data_form input:focus {
-  border: 3px solid rgb(105, 70, 70);
+.box-data_form label input:hover {
+  -webkit-box-shadow: 6px 7px 21px 1px rgba(0, 0, 0, 0.22);
+  box-shadow: 6px 7px 21px 1px rgba(0, 0, 0, 0.22);
+}
+
+.box-data_form label input:focus {
+  -webkit-box-shadow: 6px 7px 21px 1px rgba(0, 0, 0, 0.42);
+  box-shadow: 6px 7px 21px 1px rgba(0, 0, 0, 0.42);
 }
 
 .box-data_form button {
@@ -58,8 +104,12 @@
   outline: none;
   cursor: pointer;
   font-size: 1.8rem;
+  transition: 0.12s ease-in-out;
+  font-family: "Mukta", sans-serif;
 }
 
 .box-data_form button:hover {
-  border: 2px solid red;
+  background: lightblue;
+  -webkit-box-shadow: 6px 7px 21px 1px rgba(0, 0, 0, 0.12);
+  box-shadow: 6px 7px 21px 1px rgba(0, 0, 0, 0.12);
 }
