--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   --color-four: #b2c9ab;
   --color-five: #e8ddb5;
   --color-font: hsl(233, 14%, 36%);
+  --box-shadow: 3px 4px 11px rgba(0, 0, 0, 0.29);
 }
 
 * {
@@ -16,11 +17,33 @@
 
 .container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.header,
+.footer {
+  min-width: 320px;
+  width: 100%;
+  /* max-width: 600px; */
+  height: 3rem;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--color-one);
+  font-family: "Mukta", sans-serif;
+}
+
+.header p,
+.footer p {
+  font-size: 1.8rem;
+  letter-spacing: 1.2px;
+  font-weight: 800;
+  color: white;
 }
 
 .box-data {
@@ -36,6 +59,7 @@
 .box-data_title {
   width: 100%;
   padding: 15px;
+  margin-top: 20px;
   margin-bottom: 20px;
   display: flex;
   flex-direction: column;
@@ -44,18 +68,19 @@
   border-radius: 1.6rem;
   background: linear-gradient(var(--color-three), var(--color-four));
   color: var(--color-font);
-  -webkit-box-shadow: 6px 7px 21px 7px rgba(0, 0, 0, 0.29);
-  box-shadow: 6px 7px 21px 7px rgba(0, 0, 0, 0.29);
+  -webkit-box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow);
   font-family: "Mukta", sans-serif;
 }
 
 .box-data_title h1 {
-  font-size: 3rem;
+  font-size: 2.2rem;
 }
 
 .box-data_form {
   width: 100%;
   padding: 15px;
+  margin-bottom: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -63,8 +88,8 @@
   background: linear-gradient(var(--color-three), var(--color-five));
   color: var(--color-font);
   border-radius: 1.6rem;
-  -webkit-box-shadow: 6px 7px 21px 7px rgba(0, 0, 0, 0.29);
-  box-shadow: 6px 7px 21px 7px rgba(0, 0, 0, 0.29);
+  -webkit-box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow);
   font-family: "Mukta", sans-serif;
 }
 
@@ -112,4 +137,12 @@
   background: lightblue;
   -webkit-box-shadow: 6px 7px 21px 1px rgba(0, 0, 0, 0.12);
   box-shadow: 6px 7px 21px 1px rgba(0, 0, 0, 0.12);
+}
+
+#calculateFutureValue {
+  background-color: hsl(180, 29%, 58%);
+}
+
+#calculateFutureValue:hover {
+  background-color: hsl(180, 51%, 59%);
 }
