--- a/public/style.css
+++ b/public/style.css
@@ -50,6 +50,7 @@
   min-width: 320px;
   width: 100%;
   max-width: 600px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -145,4 +146,21 @@
 
 #calculateFutureValue:hover {
   background-color: hsl(180, 51%, 59%);
+}
+
+@media screen and (max-width: 600px) {
+  .header p,
+  .footer p {
+    font-size: 1.4rem;
+    letter-spacing: 1.2px;
+  }
+  .box-data_title h1 {
+    font-size: 1.4rem;
+  }
+  .box-data_form label input {
+    font-size: 1.1rem;
+  }
+  .box-data_form button {
+    font-size: 1.2rem;
+  }
 }
